[gd_scene load_steps=27 format=2]

[ext_resource path="res://Script/Icon.gd" type="Script" id=1]
[ext_resource path="res://Script/View.gd" type="Script" id=2]
[ext_resource path="res://Scene/Resource/3D_View.tscn" type="PackedScene" id=3]
[ext_resource path="res://Script/Others/CamEixo.gd" type="Script" id=4]
[ext_resource path="res://Script/Others/Eixo_Button.gd" type="Script" id=5]
[ext_resource path="res://Script/Menu_button_propriety.gd" type="Script" id=6]
[ext_resource path="res://Script/MenuBttScripts/CameraOptions/Default.gd" type="Script" id=7]
[ext_resource path="res://Script/MenuBttScripts/CameraOptions/Unshaded.gd" type="Script" id=8]
[ext_resource path="res://Script/MenuBttScripts/CameraOptions/Overdraw.gd" type="Script" id=9]

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.3
bottom_radius = 0.3
radial_segments = 16
rings = 0

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
albedo_color = Color( 0.286275, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
albedo_color = Color( 0, 0.321569, 1, 1 )

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="Gradient" id=21]
offsets = PoolRealArray( 0.625, 0.666667 )
colors = PoolColorArray( 1, 1, 1, 0.141176, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=20]
gradient = SubResource( 21 )
fill = 1
fill_from = Vector2( 0.5, 0.5 )

[sub_resource type="Gradient" id=22]
offsets = PoolRealArray( 0.625, 0.666667 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=16]
gradient = SubResource( 22 )
fill = 1
fill_from = Vector2( 0.5, 0.5 )

[sub_resource type="Gradient" id=23]
offsets = PoolRealArray( 0.625, 0.666667 )
colors = PoolColorArray( 1, 1, 1, 0.584314, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=18]
gradient = SubResource( 23 )
fill = 1
fill_from = Vector2( 0.5, 0.5 )

[sub_resource type="Gradient" id=24]
offsets = PoolRealArray( 0.397638, 0.425197, 0.452756 )
colors = PoolColorArray( 1, 1, 1, 0.431373, 1, 1, 1, 1, 0.870588, 0.870588, 0.870588, 0 )

[sub_resource type="GradientTexture2D" id=14]
gradient = SubResource( 24 )
fill = 1
fill_from = Vector2( 0.5, 0.5 )

[sub_resource type="Gradient" id=25]
offsets = PoolRealArray( 0.397638, 0.433071, 0.46063, 0.507874 )
colors = PoolColorArray( 1, 1, 1, 0.572549, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=12]
gradient = SubResource( 25 )
fill = 1
fill_from = Vector2( 0.5, 0.5 )

[sub_resource type="Gradient" id=26]
offsets = PoolRealArray( 0.397638, 0.425197, 0.452756 )
colors = PoolColorArray( 1, 1, 1, 0.160784, 1, 1, 1, 1, 0.870588, 0.870588, 0.870588, 0 )

[sub_resource type="GradientTexture2D" id=10]
gradient = SubResource( 26 )
fill = 1
fill_from = Vector2( 0.5, 0.5 )

[sub_resource type="GDScript" id=27]
script/source = "extends Label

func _process(delta: float) -> void:
	text = str(Engine.get_frames_per_second())
"

[node name="ViewPanel" type="PanelContainer"]
anchor_right = 0.595312
anchor_bottom = 0.786111
mouse_filter = 2
size_flags_horizontal = 9
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="View" type="ViewportContainer" parent="."]
margin_left = 3.0
margin_top = 5.0
margin_right = 758.999
margin_bottom = 559.0
mouse_filter = 2
size_flags_horizontal = 11
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="View"]
size = Vector2( 755, 553 )
handle_input_locally = false
render_target_update_mode = 3
shadow_atlas_size = 2048
shadow_atlas_quad_1 = 3
shadow_atlas_quad_2 = 4
shadow_atlas_quad_3 = 5

[node name="3D_View" parent="View/Viewport" instance=ExtResource( 3 )]

[node name="Camera" parent="View/Viewport/3D_View" index="1"]
transform = Transform( 1, 6.18174e-08, 2.12813e-07, -1.94193e-07, 0.707107, 0.707107, -1.0677e-07, -0.707107, 0.707107, 1.0677e-06, 7.07107, 7.07107 )

[node name="Screen_Mouse" type="Control" parent="."]
margin_left = 3.0
margin_top = 5.0
margin_right = 758.999
margin_bottom = 559.0
script = ExtResource( 2 )

[node name="Preview2D" type="HBoxContainer" parent="Screen_Mouse"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -75.0

[node name="TexPanel" type="PanelContainer" parent="Screen_Mouse/Preview2D"]
self_modulate = Color( 1, 1, 1, 0.658824 )
margin_right = 75.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Icon" type="TextureRect" parent="Screen_Mouse/Preview2D/TexPanel"]
margin_left = 3.0
margin_top = 5.0
margin_right = 72.0
margin_bottom = 68.0
expand = true
script = ExtResource( 1 )

[node name="Settings" type="Control" parent="."]
margin_left = 3.0
margin_top = 5.0
margin_right = 758.999
margin_bottom = 559.0
mouse_filter = 2

[node name="CameraOption" type="MenuButton" parent="Settings"]
margin_left = 7.0
margin_top = 5.0
margin_right = 51.0
margin_bottom = 29.0
text = "View"
flat = false
align = 0
items = [ "Default", null, 0, false, false, 0, 0, null, "", false, "Unshaded", null, 0, false, false, 1, 0, null, "", false, "Overdrive", null, 0, false, false, 2, 0, null, "", false ]
script = ExtResource( 6 )
Scripts = [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ]

[node name="Eixo" type="Control" parent="."]
margin_left = 3.0
margin_top = 5.0
margin_right = 758.999
margin_bottom = 559.0
mouse_filter = 2
size_flags_horizontal = 9

[node name="View" type="ViewportContainer" parent="Eixo"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -74.9994
margin_top = 4.0
margin_right = -4.99939
margin_bottom = 74.0
rect_min_size = Vector2( 70, 70 )
mouse_filter = 2
stretch = true

[node name="View" type="Viewport" parent="Eixo/View"]
size = Vector2( 70, 70 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3
physics_object_picking = true

[node name="Pivot" type="Spatial" parent="Eixo/View/View"]

[node name="Camera" type="Camera" parent="Eixo/View/View/Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
cull_mask = 524288
script = ExtResource( 4 )
Cam_path = NodePath("../../../../../View/Viewport/3D_View/Camera")
Pos_path = NodePath("../../../../../View/Viewport/3D_View/Pos")
Index_value = true

[node name="Model" type="Spatial" parent="Eixo/View/View"]

[node name="Eixo_y" type="MeshInstance" parent="Eixo/View/View/Model"]
transform = Transform( 0.0504707, 0, 0, 0, 0.216303, 0, 0, 0, 0.0504707, 0, 0.258, 0 )
layers = 524288
mesh = SubResource( 1 )
skeleton = NodePath("../../Pivot/Camera")
material/0 = SubResource( 2 )

[node name="Pos" type="Position3D" parent="Eixo/View/View/Model/Eixo_y"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, -2.84217e-14, 1, 0, 1, 0 )

[node name="Pos2" type="Position3D" parent="Eixo/View/View/Model/Eixo_y"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, -2.84217e-14, 1, 0, -3.8, 0 )

[node name="Eixo_z" type="MeshInstance" parent="Eixo/View/View/Model"]
transform = Transform( 0.0504707, 0, 0, 0, 9.4549e-09, -0.0504707, 0, -0.216303, -2.20614e-09, 0, 0, 0.3 )
layers = 524288
mesh = SubResource( 1 )
skeleton = NodePath("../../Pivot/Camera")
material/0 = SubResource( 3 )

[node name="Pos" type="Position3D" parent="Eixo/View/View/Model/Eixo_z"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, -2.84217e-14, 1, 0, -1, 0 )

[node name="Pos2" type="Position3D" parent="Eixo/View/View/Model/Eixo_z"]
transform = Transform( 1, 0, 0, 0, 1, -3.55271e-15, 0, -4.26326e-14, 1, 0, 3.8, 0 )

[node name="Eixo_x" type="MeshInstance" parent="Eixo/View/View/Model"]
transform = Transform( 3.81043e-09, 0.216303, -2.20614e-09, 0, -9.4549e-09, -0.0504707, -0.0504707, 1.63304e-08, -1.66559e-16, 0.3, 0, 0 )
layers = 524288
mesh = SubResource( 1 )
skeleton = NodePath("../../Pivot/Camera")
material/0 = SubResource( 4 )

[node name="Pos" type="Position3D" parent="Eixo/View/View/Model/Eixo_x"]
transform = Transform( 1, 2.84217e-14, -2.75286e-21, 0, 1, -5.81353e-23, -1.69407e-21, -5.68434e-14, 1, 0, 1, 0 )

[node name="Pos2" type="Position3D" parent="Eixo/View/View/Model/Eixo_x"]
transform = Transform( 1, 2.84217e-14, -2.75286e-21, 0, 1, -5.81353e-23, -1.69407e-21, -5.68434e-14, 1, 0, -3.8, 0 )

[node name="Center" type="Position2D" parent="Eixo/View"]
position = Vector2( 35, 35 )

[node name="Rot" type="TextureButton" parent="Eixo/View/Center"]
modulate = Color( 1, 1, 1, 0.360784 )
margin_left = -42.0
margin_top = -42.0
margin_right = 43.0
margin_bottom = 43.0
mouse_default_cursor_shape = 6
texture_normal = SubResource( 20 )
texture_pressed = SubResource( 16 )
texture_hover = SubResource( 18 )
expand = true

[node name="X" type="Position2D" parent="Eixo/View"]
position = Vector2( 16.0006, 16 )
scale = Vector2( 0.8, 0.8 )

[node name="X" type="TextureButton" parent="Eixo/View/X"]
self_modulate = Color( 1, 0, 0, 1 )
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
texture_normal = SubResource( 14 )
texture_pressed = SubResource( 12 )
texture_hover = SubResource( 12 )
expand = true
script = ExtResource( 5 )
axis = Vector3( 0, -90, 0 )

[node name="Text" type="Label" parent="Eixo/View/X/X"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "X"
align = 1
valign = 1

[node name="Y" type="Position2D" parent="Eixo/View"]
position = Vector2( 16.0006, 16 )
scale = Vector2( 0.8, 0.8 )

[node name="Y" type="TextureButton" parent="Eixo/View/Y"]
self_modulate = Color( 0, 1, 0.0627451, 1 )
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
texture_normal = SubResource( 14 )
texture_pressed = SubResource( 12 )
texture_hover = SubResource( 12 )
expand = true
script = ExtResource( 5 )
axis = Vector3( 90, 0, 0 )

[node name="Text" type="Label" parent="Eixo/View/Y/Y"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Y"
align = 1
valign = 1

[node name="Z" type="Position2D" parent="Eixo/View"]
position = Vector2( 16.0006, 16 )
scale = Vector2( 0.8, 0.8 )

[node name="Z" type="TextureButton" parent="Eixo/View/Z"]
self_modulate = Color( 0, 0.454902, 1, 1 )
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
texture_normal = SubResource( 14 )
texture_pressed = SubResource( 12 )
texture_hover = SubResource( 12 )
expand = true
script = ExtResource( 5 )
axis = Vector3( 0, 180, 0 )

[node name="Text" type="Label" parent="Eixo/View/Z/Z"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Z"
align = 1
valign = 1

[node name="X2" type="Position2D" parent="Eixo/View"]
modulate = Color( 0.678431, 0.678431, 0.678431, 1 )
position = Vector2( 16.0006, 16 )
scale = Vector2( 0.8, 0.8 )

[node name="X" type="TextureButton" parent="Eixo/View/X2"]
modulate = Color( 1, 0, 0, 1 )
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
texture_normal = SubResource( 10 )
texture_pressed = SubResource( 12 )
texture_hover = SubResource( 12 )
expand = true
script = ExtResource( 5 )
axis = Vector3( 0, 90, 0 )

[node name="Y2" type="Position2D" parent="Eixo/View"]
modulate = Color( 0.678431, 0.678431, 0.678431, 1 )
position = Vector2( 16.0006, 16 )
scale = Vector2( 0.8, 0.8 )

[node name="Y" type="TextureButton" parent="Eixo/View/Y2"]
modulate = Color( 0, 1, 0.0627451, 1 )
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
texture_normal = SubResource( 10 )
texture_pressed = SubResource( 12 )
texture_hover = SubResource( 12 )
expand = true
script = ExtResource( 5 )
axis = Vector3( -90, 0, 0 )

[node name="Z2" type="Position2D" parent="Eixo/View"]
modulate = Color( 0.678431, 0.678431, 0.678431, 1 )
position = Vector2( 16.0006, 16 )
scale = Vector2( 0.8, 0.8 )

[node name="Z" type="TextureButton" parent="Eixo/View/Z2"]
modulate = Color( 0, 0.454902, 1, 1 )
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
texture_normal = SubResource( 10 )
texture_pressed = SubResource( 12 )
texture_hover = SubResource( 12 )
expand = true
script = ExtResource( 5 )

[node name="Fps" type="Label" parent="."]
margin_left = 3.0
margin_top = 5.0
margin_right = 758.999
margin_bottom = 25.0
size_flags_vertical = 0
text = "FPS:0"
align = 1
script = SubResource( 27 )

[connection signal="mouse_entered" from="Screen_Mouse" to="Screen_Mouse" method="_on_Screen_Mouse_mouse_entered"]
[connection signal="mouse_exited" from="Screen_Mouse" to="Screen_Mouse" method="_on_Screen_Mouse_mouse_exited"]
[connection signal="gui_input" from="Eixo/View/Center/Rot" to="Eixo/View/View/Pivot/Camera" method="_on_Rot_gui_input"]

[editable path="View/Viewport/3D_View"]
